2004-08-07  Zoltan Varga  <vargaz@freemail.hu>

	* mini-amd64.c (mono_arch_emit_prolog): Optimize lmf saving a bit.

	* tramp-amd64.c: Patch calling code in trampolines.

2004-08-06  Zoltan Varga  <vargaz@freemail.hu>

	* mini-amd64.c: pinvoke struct passing fixes.

2004-08-05  Bernie Solomon  <bernard@ugsolutions.com>

	* mini-sparc.c: redo change, make mono_arch_cpu_init call
	mono_arch_cpu_optimizazions so sparcv9 is initialized when embedded

2004-08-05  Duncan Mak  <duncan@ximian.com>

	* mini.c: Renamed CEE_STELEM to CEE_STELEM_ANY and CEE_LDELEM to
	CEE_LDELEM_ANY.

2004-08-05  Zoltan Varga  <vargaz@freemail.hu>

	* mini-amd64.c (emit_move_return_value): Move return value for normal
	calls too.

2004-08-05  Martin Baulig  <martin@ximian.com>

	* mini.c (ret_type_to_call_opcode): Don't use a `t' variable for
	`type->type'; just modify `type' itself when dealing with enums
	and generic instances.
	(check_call_signature): Make `simple_type' a `MonoType *'.

2004-08-05  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c: Use OP_PADD to add offsets to addresses.

	* mini-amd64.h: Disable SIGSEGV_ON_ALTSTACK.

2004-08-04  Bernie Solomon  <bernard@ugsolutions.com>

	* mini-sparc.c (mono_arch_emit_epilog): fix check
	for folding last op into restore instruction

2004-08-05  Zoltan Varga  <vargaz@freemail.hu>

	* exceptions-amd64.c (mono_arch_get_throw_exception_by_name): Allocate
	helper methods using the code manager.
	
	* exceptions-amd64.c (mono_arch_get_throw_exception): Fix maximum length.

	* mini-amd64.c (mono_arch_allocate_vars): Fix tls offset detection.

Tue Aug 3 23:50:00 EST 2004 Neale Ferguson <Neale.Ferguson@SoftwareAG-usa.com>
	
	* mini-s390x.c mini-s390x.h tramp-s390x.c inssel-s390x.brg
	  cpu-s390x.md exceptions-s390x.c Makefile.am: S/390 64-bit JIT

	* mini-s390.c: fix tail processing

Tue Aug 3 01:35:44 PDT 2004 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c: mul.ovf.un exception name fix.

2004-08-03  Martin Baulig  <martin@ximian.com>
